--- a/package.json
+++ b/package.json
@@ -7,27 +7,28 @@
     "lib": "lib"
   },
   "dependencies": {
-    "crypto-js": "^3.1.9-1",
-    "rxjs": "^6.4.0",
-    "uuid": "^3.1.0"
+    "crypto-js": "^4.1.1",
+    "node-notifier": "^10.0.0",
+    "rxjs": "^7.4.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/crypto-js": "^3.1.33",
-    "@types/jest": "^23.1.1",
-    "@types/uuid": "^3.0.0",
+    "@types/crypto-js": "^4.0.2",
+    "@types/jest": "^27.0.2",
+    "@types/uuid": "^8.3.1",
     "codecov": "^3.2.0",
-    "eslint": "^5.12.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.6.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "husky": "^1.3.1",
-    "jest": "^23.1.0",
-    "mock-socket": "^7.1.0",
-    "prettier": "^1.16.1",
-    "pretty-quick": "^1.10.0",
-    "semantic-release": "^15.13.25",
-    "ts-jest": "^22.4.6",
-    "typescript": "^2.3.4"
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
+    "jest": "^27.3.1",
+    "mock-socket": "^9.0.7",
+    "prettier": "^2.4.1",
+    "pretty-quick": "^3.1.1",
+    "semantic-release": "^18.0.0",
+    "ts-jest": "^27.0.7",
+    "typescript": "^4.4.4"
   },
   "husky": {
     "hooks": {
@@ -55,25 +56,5 @@
   "bugs": {
     "url": "https://github.com/inf3cti0n95/Rocket.Chat.RealTime.API.RxJS/issues"
   },
-  "homepage": "https://github.com/inf3cti0n95/Rocket.Chat.RealTime.API.RxJS#readme",
-  "jest": {
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "transform": {
-      "^.+\\.(ts|tsx)$": "ts-jest"
-    },
-    "globals": {
-      "ts-jest": {
-        "tsConfigFile": "tsconfig.json"
-      }
-    },
-    "testMatch": [
-      "**/tests/*.+(ts|tsx|js)"
-    ],
-    "coverageDirectory": "./coverage/",
-    "collectCoverage": true
-  }
+  "homepage": "https://github.com/inf3cti0n95/Rocket.Chat.RealTime.API.RxJS#readme"
 }
