--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lucabuening/rocket.chat.realtime.api.rxjs",
-  "version": "0.0.0-development",
+  "version": "0.0.1",
   "description": "Abstraction for Utilizing Rocket.Chat's Realtime API Methods with RxJS. Forked by Luca Büning",
   "main": "lib/index.js",
   "directories": {
